apps/goatlint/src/snapshots/fixtures__cli__invalid_config_with_rule_alias_@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_with_rule_alias
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `vitest/no-hooks`:
  |   invalid type: integer `123`, expected a sequence
  |   received config: `{ "allow": 123 }`

----------
CLI result: InvalidOptionConfig
----------
