apps/goatlint/src/snapshots/fixtures__cli__issue_10394_-c .oxlintrc.json@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c .goatlintrc.json
working directory: fixtures/cli/issue_10394
----------

  ! eslint-plugin-jest(valid-title): Should not have an empty title
   ,-[foo.test.ts:1:10]
 1 | describe("", () => {
   :          ^^
 2 |   //
   `----
  help: Write a meaningful title for your test

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
