apps/goatlint/src/snapshots/fixtures__cli__issue_11644_-c .goatlintrc.json@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c .goatlintrc.json
working directory: fixtures/cli/issue_11644
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
